care/force-app/main/default/objects/Survey_Feedback__c/fields/Feedback_Comment_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Comment_Sentiment__c</fullName>
    <label>Feedback Comment Sentiment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>