care/force-app/main/default/objects/Survey_Feedback__c/fields/Hours_Saved__c.field-meta.xml
<CustomField>
    <fullName>Hours_Saved__c</fullName>
    <description>Field used for Lifecare LeaveCoach Survey</description>
    <inlineHelpText>How many hours did this service saved you?</inlineHelpText>
    <label>Hours Saved ?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>