care/force-app/main/default/objects/Survey_Feedback__c/fields/How_Did_You_Hear_About_Benefit__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Benefit__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <label>How Did You Hear About Benefit?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>