care/force-app/main/default/objects/Survey_Feedback__c/fields/how_did_you_Hear_About_Program__c.field-meta.xml
<CustomField>
    <fullName>how_did_you_Hear_About_Program__c</fullName>
    <description>Field used for Lifecare LEAVECOACH Survey.</description>
    <inlineHelpText>How did you hear about this program?</inlineHelpText>
    <label>how did you Hear About Program ?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>