care/force-app/main/default/objects/Survey_Feedback__c/fields/How_easy_to_solve_your_problem__c.field-meta.xml
<CustomField>
    <fullName>How_easy_to_solve_your_problem__c</fullName>
    <description>Overall, how easy was it to solve your problem with Care.com today?</description>
    <inlineHelpText>Overall, how easy was it to solve your problem with Care.com today?</inlineHelpText>
    <label>How easy to solve your problem?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Easy</fullName>
            </value>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Very Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>