care/force-app/main/default/objects/Survey_Feedback__c/fields/How_likely_are_you_to_recommend_Care__c.field-meta.xml
<CustomField>
    <fullName>How_likely_are_you_to_recommend_Care__c</fullName>
    <description>How likely are you to recommend Care to a friend or colleague?

On a scale of 0 to 10, where 0 is “Not at all Likely” and 10 is “Extremely Likely”</description>
    <inlineHelpText>How likely are you to recommend Care to a friend or colleague?</inlineHelpText>
    <label>How likely are you to recommend Care?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>