care/force-app/main/default/objects/Survey_Feedback__c/fields/How_satisfied_enrollment_process__c.field-meta.xml
<CustomField>
    <fullName>How_satisfied_enrollment_process__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: How satisfied were you with the enrollment process?</inlineHelpText>
    <label>How satisfied with enrollment process?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Extremely Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>