care/force-app/main/default/objects/Survey_Feedback__c/fields/How_satisfied_quality_of_care__c.field-meta.xml
<CustomField>
    <fullName>How_satisfied_quality_of_care__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: How satisfied were you with the quality of care?</inlineHelpText>
    <label>How satisfied with the quality of care?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Extremely Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Sehr zufrieden</fullName>
            </value>
            <value>
                <fullName>Etwas zufrieden</fullName>
            </value>
            <value>
                <fullName>Weder zufrieden noch unzufrieden</fullName>
            </value>
            <value>
                <fullName>Etwas unzufrieden</fullName>
            </value>
            <value>
                <fullName>Sehr unzufrieden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>