care/force-app/main/default/objects/Survey_Feedback__c/fields/How_satisfied_were_you_w_specialist__c.field-meta.xml
<CustomField>
    <fullName>How_satisfied_were_you_w_specialist__c</fullName>
    <label>How satisfied were you w/ specialist?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>