care/force-app/main/default/objects/Survey_Feedback__c/fields/Information_shared_by_the_Member__c.field-meta.xml
<CustomField>
    <fullName>Information_shared_by_the_Member__c</fullName>
    <description>Security/IT/Safety teams launching a Fraud Follow up survey to capture additional information on cases where the member has reported fraud.  Sforce - 1634</description>
    <inlineHelpText>Information shared by the Member</inlineHelpText>
    <label>Information shared by the Member</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Address</fullName>
            </value>
            <value>
                <fullName>Phone Number</fullName>
            </value>
            <value>
                <fullName>I haven&apos;t shared my information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>