care/force-app/main/default/objects/Survey_Feedback__c/fields/Jira_Number__c.field-meta.xml
<CustomField>
    <fullName>Jira_Number__c</fullName>
    <description>Created as part of SFORCE-3306
2962 - Configure Survey Feedbacks</description>
    <inlineHelpText>Jira number associated with Bug reported, if Jira already filed</inlineHelpText>
    <label>Jira Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>