care/force-app/main/default/objects/Survey_Feedback__c/fields/Key_Features__c.field-meta.xml
<CustomField>
    <fullName>Key_Features__c</fullName>
    <label>Key Features</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBUC</fullName>
            </value>
            <value>
                <fullName>M2T</fullName>
            </value>
            <value>
                <fullName>Tiering</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>HomePay</fullName>
            </value>
            <value>
                <fullName>Benefits - Health &amp; Dental</fullName>
            </value>
            <value>
                <fullName>Benefits - Benefit Bucks</fullName>
            </value>
            <value>
                <fullName>Benefits - LifeMart Discounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>