care/force-app/main/default/objects/Survey_Feedback__c/fields/Loyalty_impact__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_impact__c</fullName>
    <label>Loyalty impact?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>