care/force-app/main/default/objects/Survey_Feedback__c/fields/Member_Country__c.field-meta.xml
<CustomField>
    <fullName>Member_Country__c</fullName>
    <formula>Case__r.Member_Country__c</formula>
    <label>Member Country</label>
    <type>Text</type>
</CustomField>