care/force-app/main/default/objects/Survey_Feedback__c/fields/Member_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Full_Name__c</fullName>
    <description>Full Name of the Member, added for SFORCE-2425 BUC Surveys</description>
    <label>Member Full Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>