care/force-app/main/default/objects/Survey_Feedback__c/fields/Member_Language__c.field-meta.xml
<CustomField>
    <fullName>Member_Language__c</fullName>
    <formula>TEXT(Case__r.Member_Language__c)</formula>
    <label>Member Language</label>
    <type>Text</type>
</CustomField>