care/force-app/main/default/objects/Survey_Feedback__c/fields/Member_Language_from_SM__c.field-meta.xml
<CustomField>
    <fullName>Member_Language_from_SM__c</fullName>
    <description>From SFORCE-7650.  This captures the Member Language information from SurveyMonkey-and will in turn carry over to the newly created Case.</description>
    <label>Member Language (from SM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>