care/force-app/main/default/objects/Survey_Feedback__c/fields/Member_Location_from_SM__c.field-meta.xml
<CustomField>
    <fullName>Member_Location_from_SM__c</fullName>
    <description>This is from SFORCE-7650.  This is a custom field to capture the &quot;Member Location&quot; value from the Survey in SurveyMonkey.  This will in turn be passed along to the Case record.</description>
    <label>Member Location (from SM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>