care/force-app/main/default/objects/Survey_Feedback__c/fields/Method_Communication_was_Received__c.field-meta.xml
<CustomField>
    <fullName>Method_Communication_was_Received__c</fullName>
    <description>Security/IT/Safety teams launching a Fraud Follow up survey to capture additional information on cases where the member has reported fraud.  Sforce - 1653</description>
    <inlineHelpText>Method Communication was Received</inlineHelpText>
    <label>Method Communication was Received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care.com Messaging</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>