care/force-app/main/default/objects/Survey_Feedback__c/fields/Notes_Other__c.field-meta.xml
<CustomField>
    <fullName>Notes_Other__c</fullName>
    <label>Notes/Other</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>