care/force-app/main/default/objects/Survey_Feedback__c/fields/NPS_Group__c.field-meta.xml
<CustomField>
    <fullName>NPS_Group__c</fullName>
    <label>NPS Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>