care/force-app/main/default/objects/Survey_Feedback__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>How likely are you to recommend Care.com to a friend or colleague?</description>
    <inlineHelpText>How likely are you to recommend Care.com to a friend or colleague?</inlineHelpText>
    <label>NPS Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>