care/force-app/main/default/objects/Survey_Feedback__c/fields/Number_Provider_Options__c.field-meta.xml
<CustomField>
    <fullName>Number_Provider_Options__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>Survey answer for How many Provider Options were given.</description>
    <label>Number of Provider Options given</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>