care/force-app/main/default/objects/Survey_Feedback__c/fields/Other_Please_Specify_PN_vs_CaW__c.field-meta.xml
<CustomField>
    <fullName>Other_Please_Specify_PN_vs_CaW__c</fullName>
    <description>This field is linked to the picklist field Personal Network v Care@Work&apos;s network.  If the &quot;other&quot; value is populated there, it must be populated here.</description>
    <label>Other (Please Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>