care/force-app/main/default/objects/Survey_Feedback__c/fields/Other_Resources__c.field-meta.xml
<CustomField>
    <fullName>Other_Resources__c</fullName>
    <description>Field Used for Lifecare LEAVECOACH Survey</description>
    <inlineHelpText>If you didn&apos;t have the Coach as a resource, who would you have reached out to?</inlineHelpText>
    <label>Other Resources</label>
    <length>50</length>
    <type>Text</type>
</CustomField>