care/force-app/main/default/objects/Survey_Feedback__c/fields/Overall_satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_satisfaction__c</fullName>
    <label>Overall satisfaction?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>