care/force-app/main/default/objects/Survey_Feedback__c/fields/Overall_Satisfaction_Backup_Care_Service__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_Backup_Care_Service__c</fullName>
    <label>Overall Satisfaction Backup Care Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>Extremely dissatisfied</fullName>
            </value>
            <value>
                <fullName>Sehr zufrieden</fullName>
            </value>
            <value>
                <fullName>Etwas zufrieden</fullName>
            </value>
            <value>
                <fullName>Weder zufrieden noch unzufrieden</fullName>
            </value>
            <value>
                <fullName>Etwas unzufrieden</fullName>
            </value>
            <value>
                <fullName>Sehr unzufrieden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>