care/force-app/main/default/objects/Survey_Feedback__c/fields/Permission_for_testimonial__c.field-meta.xml
<CustomField>
    <fullName>Permission_for_testimonial__c</fullName>
    <label>Permission for testimonial?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>