care/force-app/main/default/objects/Survey_Feedback__c/fields/Permission_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_contact__c</fullName>
    <label>Permission to contact?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>