care/force-app/main/default/objects/Survey_Feedback__c/fields/Personal_Network_v_Care_Work_s_network__c.field-meta.xml
<CustomField>
    <fullName>Personal_Network_v_Care_Work_s_network__c</fullName>
    <label>Personal Network v Care@Work&apos;s network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I prefer using my Personal Network</fullName>
            </value>
            <value>
                <fullName>Either suits me</fullName>
            </value>
            <value>
                <fullName>I prefer to use Care@Work&apos;s Network</fullName>
            </value>
            <value>
                <fullName>Other (Specify below)</fullName>
            </value>
            <value>
                <fullName>Ich bevorzuge die Nutzung meines persönlichen Netzwerks</fullName>
            </value>
            <value>
                <fullName>Beides passt mir</fullName>
            </value>
            <value>
                <fullName>Ich bevorzuge das Netzwerk von Care for Business</fullName>
            </value>
            <value>
                <fullName>Sonstiges (bitte angeben)</fullName>
            </value>
            <value>
                <fullName>Sehr zufrieden</fullName>
            </value>
            <value>
                <fullName>Etwas zufrieden</fullName>
            </value>
            <value>
                <fullName>Weder zufrieden noch unzufrieden</fullName>
            </value>
            <value>
                <fullName>Etwas unzufrieden</fullName>
            </value>
            <value>
                <fullName>Sehr unzufrieden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>