care/force-app/main/default/objects/Survey_Feedback__c/fields/Phone_of_Person_who_Contacted_Member__c.field-meta.xml
<CustomField>
    <fullName>Phone_of_Person_who_Contacted_Member__c</fullName>
    <description>Security/IT/Safety teams launching a Fraud Follow up survey to capture additional information on cases where the member has reported fraud. Sforce - 1634</description>
    <label>Phone # of Person who Contacted Member</label>
    <type>Phone</type>
</CustomField>