care/force-app/main/default/objects/Survey_Feedback__c/fields/Preference_utilizing_backup_care__c.field-meta.xml
<CustomField>
    <fullName>Preference_utilizing_backup_care__c</fullName>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: What is your preference when utilizing backup care?</inlineHelpText>
    <label>Preference when utilizing backup care?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In my home</fullName>
            </value>
            <value>
                <fullName>At a center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>