care/force-app/main/default/objects/Survey_Feedback__c/fields/Productive_work_time_saved__c.field-meta.xml
<CustomField>
    <fullName>Productive_work_time_saved__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: How much productive work time did you save by using backup care?</inlineHelpText>
    <label>Productive work time saved using BUC?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>