care/force-app/main/default/objects/Survey_Feedback__c/fields/Productivity_change__c.field-meta.xml
<CustomField>
    <fullName>Productivity_change__c</fullName>
    <label>Productivity change?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>