care/force-app/main/default/objects/Survey_Feedback__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <description>Populated from Case Program ID</description>
    <formula>TEXT(Case__r.Program_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program ID</label>
    <type>Text</type>
</CustomField>