care/force-app/main/default/objects/Survey_Feedback__c/fields/Program_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Program_Satisfaction__c</fullName>
    <description>Field Used for Lifecare LEAVECOACH Survey</description>
    <inlineHelpText>Please rate your overall satisfaction with the program.</inlineHelpText>
    <label>Program Satisfaction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>