care/force-app/main/default/objects/Survey_Feedback__c/fields/Promoters__c.field-meta.xml
<CustomField>
    <fullName>Promoters__c</fullName>
    <description>Promoters are the people who gave you a score of 9 or 10</description>
    <formula>IF( OR(NPS_Score__c = 9,NPS_Score__c  = 10), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>