care/force-app/main/default/objects/Survey_Feedback__c/fields/Provider_2__c.field-meta.xml
<CustomField>
    <fullName>Provider_2__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <label>Provider 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>