care/force-app/main/default/objects/Survey_Feedback__c/fields/Provider_Comments__c.field-meta.xml
<CustomField>
    <fullName>Provider_Comments__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>Comments about suggested provider/placement quality</description>
    <label>Provider Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>