care/force-app/main/default/objects/Survey_Feedback__c/fields/Provider_Rating_1__c.field-meta.xml
<CustomField>
    <fullName>Provider_Rating_1__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <label>Provider Rating 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Extremely Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>