care/force-app/main/default/objects/Survey_Feedback__c/fields/Provider_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Provider_Utilization__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>If any of the provider options offered were utilized .SFORCE-1821</description>
    <inlineHelpText>Check, if any of the provider options offered were utilized .</inlineHelpText>
    <label>Provider Utilization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>