care/force-app/main/default/objects/Survey_Feedback__c/fields/Provider_Utilization_Other__c.field-meta.xml
<CustomField>
    <fullName>Provider_Utilization_Other__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>Are there other reasons, why Provider Options were not utilized.</description>
    <inlineHelpText>Other Reasons, why Provider Options were not utilized.</inlineHelpText>
    <label>Provider Utilization - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>