care/force-app/main/default/objects/Survey_Feedback__c/fields/Provider_Utilization_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Provider_Utilization_Reasons__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>used for Senior Care Provider Feedback Survey</description>
    <label>Provider Utilization Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My loved one does not have care needs at this time.</fullName>
            </value>
            <value>
                <fullName>My loved one’s care needs have changed.</fullName>
            </value>
            <value>
                <fullName>My loved one was not ready to initiate care, though they do have care needs.</fullName>
            </value>
            <value>
                <fullName>My loved one is not willing to accept care from any formal resources.</fullName>
            </value>
            <value>
                <fullName>The cost is too great.</fullName>
            </value>
            <value>
                <fullName>I was not satisfied with the provider options given.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>