care/force-app/main/default/objects/Survey_Feedback__c/fields/QA_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Comments__c</fullName>
    <description>Additional Comments for LifeCare QA Process.</description>
    <label>QA Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>